force-app/main/default/objects/Comments__c/fields/Comment_Description__c.field-meta.xml
<CustomField>
    <fullName>Comment_Description__c</fullName>
    <label>Comment Description</label>
    <length>32768</length>
    <type>LongTextArea</type>
</CustomField>