force-app/main/default/objects/Comments__c/fields/Comment_Number__c.field-meta.xml
<CustomField>
    <fullName>Comment_Number__c</fullName>
    <label>Comment Number</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>