force-app/main/default/objects/Comments__c/fields/File_Version__c.field-meta.xml
<CustomField>
    <fullName>File_Version__c</fullName>
    <label>File Version</label>
    <length>200</length>
    <type>Text</type>
</CustomField>