force-app/main/default/objects/Comments__c/fields/Id_of_File__c.field-meta.xml
<CustomField>
    <fullName>Id_of_File__c</fullName>
    <label>Id of File</label>
    <length>200</length>
    <type>Text</type>
</CustomField>