force-app/main/default/objects/Comments__c/fields/PositionX__c.field-meta.xml
<CustomField>
    <fullName>PositionX__c</fullName>
    <label>PositionX</label>
    <length>255</length>
    <type>Text</type>
</CustomField>