force-app/main/default/objects/Comments__c/fields/PositionY__c.field-meta.xml
<CustomField>
    <fullName>PositionY__c</fullName>
    <label>PositionY</label>
    <length>255</length>
    <type>Text</type>
</CustomField>