force-app/main/default/objects/Comments__c/listViews/Search_Tyler.listView-meta.xml
<ListView>
    <fullName>Search_Tyler</fullName>
    <columns>NAME</columns>
    <columns>CREATEDBY_USER</columns>
    <columns>CREATED_DATE</columns>
    <columns>File_Version__c</columns>
    <columns>My_Order__c</columns>
    <columns>OWNER.FIRST_NAME</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>CREATEDBY_USER</field>
        <operation>equals</operation>
        <value>Lori Zettler</value>
    </filters>
    <label>Search - Tyler</label>
</ListView>